--- a/Navbar/navbar.css
+++ b/Navbar/navbar.css
@@ -5,12 +5,12 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  background-color: #33333354;
+  background-color: #00000054;
   color: white;
-  position: relative;
+  position: fixed;
+  margin-top: -110px;
   z-index: 1000;
 }
-
 .imeg{
   width: 11vh; 
   height: 11vh; 
