--- a/Israel/History/History.css
+++ b/Israel/History/History.css
@@ -86,6 +86,7 @@ body {
   padding: 0px;
   padding-right: 140px;
   color: rgb(255, 255, 255);
+  margin-top: 110px;
   }
   
  .container > h4 > span {
