--- a/Israel/Israel-Army/Navbar/navbar.css
+++ b/Israel/Israel-Army/Navbar/navbar.css
@@ -7,7 +7,8 @@
   padding: 10px 20px;
   background-color: #33333354;
   color: white;
-  position: relative;
+  position: fixed;
+  margin-top: -20px;
   z-index: 1000;
 }
 
