--- a/Israel/Israel-Army/Navbar/navbar.css
+++ b/Israel/Israel-Army/Navbar/navbar.css
@@ -7,8 +7,7 @@
   padding: 10px 20px;
   background-color: #33333354;
   color: white;
-  position: fixed;
-  margin-top: -20px;
+  position: relative;
   z-index: 1000;
 }
 
