--- a/Hammaz-&-israel-War/Navbar/navbar.css
+++ b/Hammaz-&-israel-War/Navbar/navbar.css
@@ -1,14 +1,12 @@
-
 .navbar {
   height: 9vh;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  background-color: #00000054;
+  background-color: #33333354;
   color: white;
-  position: fixed;
-  margin-top: -110px;
+  position: relative;
   z-index: 1000;
 }
 .imeg{
