--- a/Israel/israel.css
+++ b/Israel/israel.css
@@ -166,7 +166,7 @@
   display: flex;
   flex-direction: column;
   overflow-y: auto;
-  max-height: calc(100vh - 60px); /* Adjust the max height to fit the viewport, considering the navbar height */
+  max-height: calc(100vh - 60px);
   width: 100%;
   padding: 20px;
   box-sizing: border-box;
